# NTHU_Course_Selecting_System

./: .gitignore  11110.csv  11120.csv  111all_11210courses.xlsx  README.md  SelectCourse.py  SelectSetting.py  interface.py  main.py  pyproject.toml  requirements.txt
data/: .~lock.all_done.csv#  11001.csv  11001.txt  11002.csv  11002.txt  11110_1.csv  11120_1.csv  all_done.csv  all_done.xlsx  cslearn.csv  cslearn.xlsx
templates/: index.html
