[tool.poetry]
name = "nthu-course-selecting-system"
version = "0.1.0"
description = ""
authors = ["Doctorxsx <allen31042@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
